Add forkDaemon API and fix fiber tracking memory leaks
This commit addresses two critical issues found during eru-http stress testing:
1. `outstandingFibers` accumulation in Eru.scala interpreter
2. `rootFibers` queue accumulation causing HTTP server performance degradation

## Root Cause Analysis

### Issue 1: outstandingFibers Leak
The Eru interpreter tracked ALL forked fibers in `outstandingFibers` ConcurrentHashMap,
but only removed them on `.await`. HTTP servers fork connection handlers without awaiting,
causing unbounded accumulation (~672 MB over 5 minutes at 48k req/s).

### Issue 2: rootFibers Queue Degradation
RuntimeBackend tracked fibers in FIFO `rootFibers` queue with incremental cleanup strategy.
The cleanup polled from front but active long-lived fibers got re-added to back, creating
churn without removing completed fibers. With 48k req/s, this caused 182-second latency
spikes after ~3 minutes.

## Solutions

### Fix 1: Conditional outstandingFibers Tracking (Eru.scala)
Only track fibers with non-empty finalizers in `outstandingFibers`:
```scala
if completedFiber.finalizers.nonEmpty then {
  outstandingFibers += completedFiber
}
```
Fibers without finalizers don't need collection at program end.

### Fix 2: New forkDaemon API
Added daemon fork variant that skips `rootFibers` tracking by passing `None`:
- `runtime.forkDaemon(effect)` - Public API method
- `effect.forkDaemon` - Extension method
- Still creates Virtual Thread and runs finalizers
- Ideal for long-running servers (HTTP, RPC, WebSocket)

## API Improvements

**New Methods:**
- `ConcurrencyBackend.forkDaemon` - Backend interface
- `RuntimeBackendAdapter.forkDaemon` - JVM implementation
- `EruRuntime.forkDaemon` - Public API
- `RuntimeExtensions.forkDaemon` - Extension method
- `RuntimeExtensions.forkTracked` - Now exposed (was missing)

**Documentation:**
- Enhanced `fork` docs with "when to use" guidance
- Detailed `forkDaemon` docs with trade-offs
- Examples showing finalizer-based cleanup